# solana-stablecoin-standard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Anchor.toml  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.keys/: id.json
audit/: AUDIT_SUMMARY.md
deployments/: devnet-proof.json  devnet-sss1-proof.json  devnet-sss2-proof.json  devnet-sss3-proof.json
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  OPERATIONS.md  README.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  requirement.md
scripts/: demo-lifecycle.ts  demo-sss1.ts  demo-sss2.ts  demo-sss3.ts  devnet-proof.ts  devnet-sss1-proof.ts  devnet-sss2-proof.ts  devnet-sss3-proof.ts  package.json  test-spl-token.ts  tsconfig.json
solana-stablecoin-backend/: .env.example  Dockerfile  README.md  package.json
solana-stablecoin-cli/: .sss-config.json  TODO.md  cli-enhancement-plan.md  eslint.config.mjs  package.json  tsconfig.json
solana-stablecoin-frontend/: eslint.config.mjs  package.json
solana-stablecoin-sdk/: eslint.config.mjs  package.json  tsconfig.json
tests/: edge-cases.test.ts  helpers.ts  oracle.test.ts  package.json  roles.test.ts  security.test.ts  sss-1.test.ts  sss-2.test.ts  sss-3.test.ts  transfer-authority.test.ts  (+1 more)
trident-tests/: Cargo.toml
trident-tests/src/: arithmetic.rs  burn_audit.rs  confidential_transfer.rs  lib.rs  oracle_feed.rs  pause_bypass.rs  pause_roles.rs  role_escalation.rs  supply_cap.rs
(+182 files in other folders)
